--- a/style.css
+++ b/style.css
@@ -110,3 +110,34 @@ footer {
     color: var(--secondary-color);
     font-size: 0.9em;
 }
+
+.spinning-image {
+    position: fixed;
+    width: 100px;
+    height: 100px;
+    background-image: url('spinning-image.jpeg');
+    background-size: cover;
+    animation: spin 4s linear infinite;
+    z-index: 1000;
+}
+
+.spinning-image.left {
+    left: 20px;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.spinning-image.right {
+    right: 20px;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+@keyframes spin {
+    from {
+        transform: translateY(-50%) rotate(0deg);
+    }
+    to {
+        transform: translateY(-50%) rotate(360deg);
+    }
+}
